# xdg-desktop-portal-hypr-remote

./: CMakeLists.txt  README.md  install.sh  test_portal.sh  test_remote_desktop.py
contrib/systemd/: xdg-desktop-portal-hypr-remote.service.in
data/: hypr-remote.portal
src/: main.cpp  portal.cpp  portal.h
